@@ -19,6 +19,7 @@ Wagtail 4.1 is designated a Long Term Support (LTS) release. Long Term Support r
  * Allow setting default attributes on image tags [](adding_default_attributes_to_images) (Jake Howard)
  * Optimise the performance of the Wagtail userbar to remove duplicated queries, improving page loads when viewing live pages while signed in (Jake Howard)
  * Remove legacy `unbutton` styling for buttons (Paarth Agarwal)
+ * Add button variations to the pattern library (Paarth Agarwal)
 
 ### Bug fixes
 
